# NukeTesting

./: .gitignore  .pre-commit-config.yaml  README.md  install_dependencies_with_nuke.py  pyproject.toml  requirements-dev.txt  run_tests.py  structure.drawio
.github/workflows/: docu.yaml  main_workflow.yaml  tests.yaml
Datamodel/: constants.py
NukeTestRunner/: run_pytest.py  run_tests.py  runner.py
Testrunner/: run_tests.py
Tests/: conftest.py
Tests/Datamodel/: test_constants.py
Tests/NukeTestRunner/: test_run_tests.py  test_runner.py
Tests/TestRunner/: test_run_tests.py
Tests/image_checks/: test_sample_comparator.py
Tests/nuke_test_runner/: test_configuration.py  test_run_tests.py  test_runner.py
_cli/: configuration.py
bbox_checks/: bbox_ckecker.py
datamodel/: constants.py
doc/source/: conf.py  debugging.md  index.md  quickstart.md
doc/source/_static/: nuke_objects.inv
image_checks/: sample_comparator.py
metadata_checks/: metadata_checker.py
nuke_test_runner/: configuration.py  run_pytest.py  run_tests.py  runner.py
src/nuke_test_runner/: __init__.py  run_tests.py
src/nuke_test_runner/_cli/: configuration.py  main.py  run_pytest_bootstrapped.py  run_tests.py  runner.py
src/nuke_test_runner/datamodel/: constants.py
src/nuke_test_runner/handler/: configuration.py  runner.py
src/nuketesting/: __init__.py  __main__.py
src/nuketesting/_cli/: configuration.py  main.py  run_pytest_bootstrapped.py  runner.py
src/nuketesting/checks/: base_classes.py
src/nuketesting/datamodel/: constants.py
src/nuketesting/image_checks/: sample_comparator.py
src/nuketesting/metadata_checks/: metadata_checker.py
tests/: conftest.py  reference_tests.py  test_bbox_checker.py  test_bbox_ckecker.py  test_metadata_checker.py  test_setup.py  test_tree_checker.py
tests/image_checks/: test_sample_comparator.py
tests/nuke_test_runner/: test_configuration.py  test_run_tests.py  test_runner.py
tree_checks/: tree_checker.py
(+46 files in other folders)
