[project]
name = "nuketesting"
version = "0.1.0"
description = "Library for testing plugins and gizmos for the compositing software Nuke."
authors = [
    { name = "Gilles Vink", email = "gilles@vinkvfx.com" },
    { name = "Lukas Wieg", email = "" }
]
dependencies = [
    "click>=8.1.7",
    "pytest>=7.4.4",
    "junitparser",
]
readme = "README.md"
requires-python = ">=3.7"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nuke-testrunner = "nuketesting._cli.main:main"

[tool.rye]
managed = true
dev-dependencies = [
    "build>=0.10.0",
    "hatch>=1.7.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.2.0",
    "ruff>=0.6.2",
    "pre-commit",
    "PySide2"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nuketesting"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "--capture=tee-sys"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "nuke: marks tests which require nuke (deselect with '-m \"not nuke\"')",
    "serial",
]
pythonpath = [
    "src"
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py37"
show-fixes = true

[tool.ruff.lint]
select = [
    "A",
    "B",
    "BLE",
    "C4",
    "D",
    "EM",
    "ERA",
    "F",
    "FA",
    "FIX",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TCH",
    "TD",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "TD003", # Missing issue link on the line following this TODO.
    "FIX001", # Line contains FIXME, consider resolving the issue.
    "FIX002", # Line contains TODO, consider resolving the issue.
]
